fixed tests that were simply failing asserts but still have issues with GraphSerializationTest